syntax = "proto3";
package pb;
option go_package = "internal/pb";

import "google/protobuf/empty.proto";

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryGetRequest { string id = 1; }

message CategoryList { repeated Category categories = 1; }

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category) {};
  rpc CreateCategoryStream(stream CreateCategoryRequest)
      returns (CategoryList) {};
  rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest)
      returns (stream Category) {};
  rpc ListCategories(google.protobuf.Empty) returns (CategoryList) {};
  rpc GetCategory(CategoryGetRequest) returns (Category) {};
}